tests/NormalTests/paczka1/fuzzy1/57662979.err
Error in line 2: ZCeE2jl A525 82,54
Error in line 1: q5aXsN S809 15,0
Error in line 7: ZCeE2jl A525 339,8
Error in line 14: S809 A344 36,6
Error in line 15: S809 A525 27,2
Error in line 21: q5aXsN A525 48,0
Error in line 32: EG6iky9 A05 265,4
Error in line 28: iCD3 A525 51,5
